second time changes

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                 </li>
             </ul>
         </section>
-        <footer class="footer_widget">
-            <footer_widget>
+        <footer>
+            <div class="footer_widget">
                 <div>
                     <h3>Location</h3><br><br>
                     3301 New Maxico Avenue<br>
@@ -142,7 +142,7 @@
                     laborum.
                 </div>
                 
-            </footer_widget>
+            </div>
             <p class="rights">2014 ARK Studio - All Rights Reserved</p>
 
            
